--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="UTF-8">
     <title>Neighborhood Map</title>
-    <link rel="stylesheet" href="css/style.css">
+    <!-- <link rel="stylesheet" href="css/style.css"> -->
+    <style>
+      html{box-sizing:border-box}*,*::after,*::before{box-sizing:inherit}html,body{font-family:"Helvetica Neue","Helvetica","Roboto","Arial",sans-serif;font-size:20px;height:100%;margin:0;padding:0}img{image-rendering:optimizeSpeed}.main{max-width:1200px;margin-left:auto;margin-right:auto;background-color:#324766;background-position:top;background-repeat:no-repeat;background-size:cover}.main::after{clear:both;content:"";display:table}.main .search-bar{width:100%;font-size:34px}.main .search-bar form{position:relative}.main .search-bar input{box-sizing:border-box;display:block;margin:0;position:relative;width:100%;padding:10px;border:solid 5px #c9c9c9;transition:border 0.3s;font-size:0.8em}.main .top .list ul{float:left;display:block;margin-right:2.5641%;width:28.20513%;color:#fff;list-style-type:none;list-style:none;padding-left:0;text-align:center}.main .top .list ul:last-child{margin-right:0}@media screen and (max-width: 768px){.main .top .list ul{float:left;display:block;margin-right:3.22581%;width:48.3871%}.main .top .list ul:last-child{margin-right:0}}@media screen and (max-width: 480px){.main .top .list ul{float:left;display:block;margin-right:6.66667%;width:100%}.main .top .list ul:last-child{margin-right:0}}.main .top .list li{border:3px solid white;width:100%}.main .top .list li:hover{background:#b3b3b3}.main .top .list li:active{position:relative;top:2px}.main .top .text{float:left;display:block;margin-right:2.5641%;width:28.20513%;margin-left:30px;text-align:center}.main .top .text:last-child{margin-right:0}@media screen and (max-width: 480px){.main .top .text{float:left;display:block;margin-right:6.66667%;width:100%;margin-left:0}.main .top .text:last-child{margin-right:0}}.main .top .text h1{color:#fff;font-size:1.6em;margin-bottom:0.5em;letter-spacing:3px}@media screen and (min-width: 48em){.main .top .text h1{font-size:3em}}@media screen and (max-width: 480px){.main .top .text h1{display:none}}.main .top .text p{color:#fff;line-height:1.4em;margin:0 auto 3em auto}@media screen and (min-width: 48em){.main .top .text p{font-size:1.5em}}@media screen and (max-width: 768px){.main .top .text p{float:left;display:block;margin-right:3.22581%;width:74.19355%;font-size:1.1em}.main .top .text p:last-child{margin-right:0}}@media screen and (max-width: 480px){.main .top .text p{display:none}}.main .top .logo{float:left;display:block;margin-right:2.5641%;width:28.20513%;margin-top:20px;margin-left:40px}.main .top .logo:last-child{margin-right:0}@media screen and (max-width: 768px){.main .top .logo{float:left;display:block;margin-right:3.22581%;width:22.58065%}.main .top .logo:last-child{margin-right:0}.main .top .logo img{height:100px;width:auto}}@media screen and (max-width: 480px){.main .top .logo{float:left;display:block;margin-right:6.66667%;width:46.66667%}.main .top .logo:last-child{margin-right:0}.main .top .logo img{height:75px;width:auto}}.main #map{height:392px;width:100%;max-width:1200px;margin-left:auto;margin-right:auto}.main #map::after{clear:both;content:"";display:table}.main .bullets{display:-webkit-box;display:-moz-box;display:box;display:-webkit-flex;display:-moz-flex;display:-ms-flexbox;display:flex;-webkit-box-lines:multiple;-moz-box-lines:multiple;box-lines:multiple;-webkit-flex-wrap:wrap;-moz-flex-wrap:wrap;-ms-flex-wrap:wrap;flex-wrap:wrap;margin-bottom:1.5em;margin:1em;overflow:auto;padding:0}.main .bullets .bullet{-webkit-flex-basis:20em;-moz-flex-basis:20em;flex-basis:20em;-ms-flex-preferred-size:20em;-webkit-flex-grow:1;-moz-flex-grow:1;flex-grow:1;-ms-flex-positive:1}.main .bullets .bullet-icon{float:left;padding:0.875em}.main .bullets .bullet-content{margin-left:4.9em;margin-bottom:2em}.main .bullets h2{display:inline-block;font-size:1.4em;margin:0 0 0.58333em 0;padding-top:0.5em}.main .bullets li{list-style:none}.main .bullets p{color:#fff;line-height:1.5em}.main .bullets img{max-width:100%}
+    </style>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script defer src="https://maps.googleapis.com/maps/api/js?&callback=initMap"></script>
   </head>
   <body>
     <div class="main">
@@ -14,18 +16,20 @@
           <input id="search-box" type="search" data-bind="textInput: query, valueUpdate: 'keyup'" placeholder="Enter Search"></input>
         </form>
       </div> <!--search-bar-->
-      <div class="list">
-        <ul data-bind="foreach: search()">
-          <li data-bind="text: title, click: $root.listviewClick"></li>
-        </ul>
-      </div> <!--list-->
-      <div class="text">
-        <h1>LA</h1>
-        <p>Find good coffee in and around Los Angeles</p>
-      </div> <!--text-->
-      <div class="logo">
-        <img src="./img/coffee.png" alt="coffee cup graphic">
-      </div>
+      <div class="top">
+        <div class="list">
+          <ul data-bind="foreach: search()">
+            <li data-bind="text: title, click: $root.listviewClick"></li>
+          </ul>
+        </div> <!--list-->
+        <div class="text">
+          <h1>LA</h1>
+          <p>Find good coffee in and around Los Angeles</p>
+        </div> <!--text-->
+        <div class="logo">
+          <img src="./img/coffee.png" alt="coffee cup graphic">
+        </div> <!--logo-->
+      </div> <!--top-->
       <div id="map">
       </div> <!--map-->
       <div class="credits">
@@ -57,5 +61,7 @@
     <script src="js/lib/jquery-1.11.3.min.js"></script>
     <script src="js/lib/oauth-signature.min.js"></script>
     <script src="js/app.js"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?&callback=initMap"></script>
+
   </body>
 </html>
